--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 		"version": "1.0.0",
 		"description": "JavaScript development environment",
 		"scripts": {
-				"prestart": "node build/startMessage.js",
+				"prestart": "babel-node build/startMessage.js",
 				"start": "npm-run-all --parallel security-check open:src",
-				"open:src": "node build/server.js",
+				"open:src": "babel-node build/server.js",
 				"security-check": "nsp check"
 		},
 		"author": "Hans Lemkes",
