first setup with webpack

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		},
 		"author": "Hans Lemkes",
 		"dependencies": {
+				"npm": "^6.0.0",
 				"whatwg-fetch": "1.0.0"
 		},
 		"devDependencies": {
